--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="head">
+        <nav>
+            <h2>Influencer Products</h2>
+            <ul>
+               <li><a href="">Home</a></li>
+               <li><a href="">Products</a></li>
+               <li><a href="">Sign Up</a></li>
+               <li><a href="">Log in</a></li>    
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1>Start your Journey as <br>Influence</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem 
+                    vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                  <button class="btn1">Preebook Now</button>
+             </div>
+             <img src="images/images/main-camera.png" alt="">
+        </div>
+    </div>
+    </header>
 </body>
 </html>
