--- a/index.html
+++ b/index.html
@@ -28,5 +28,89 @@
         </div>
     </div>
     </header>
+    <main>
+        <div class="logo">
+            <div> <img src="images/logos/Alibaba.svg" alt=""></div>
+            <div> <img src="images/logos/Amazon.svg" alt=""></div>
+            <div> <img src="images/logos/Daraz.pk Logo.svg" alt=""></div>
+            <div> <img src="images/logos/Ebay.svg" alt=""></div>
+            <div> <img src="images/logos/Target.svg" alt=""></div>
+            <div> <img src="images/logos/Walmart.svg" alt=""></div>
+            <div><img src="images/logos/Rakuten.svg" alt=""></div>   
+        </div>
+
+        <section class="popular-section">
+                <h2>Popular Collection</h2>
+                <div class="popular">
+                <div>
+                    <img src="images/images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <h4>$50.48</h4>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div>
+                    <img src="images/images/mic.png" alt="">
+                    <h3>microphone</h3>
+                    <h4>$120.5</h4>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div>
+                    <img src="images/images/airpod.png" alt="">
+                    <h3>Airbus</h3>
+                    <h4>$100.00</h4>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div>
+                    <img src="images/images/drone.png" alt="">
+                    <h3>Drone</h3>
+                    <h4>$980.25</h4>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div>
+                    <img src="images/images/lights.png" alt="">
+                    <h3>Light Setup</h3>
+                    <h4>$1200.00</h4>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div>
+                    <img src="images/images/setup.png" alt="">
+                    <h3>Photoshot setup</h3>
+                    <h4>$820.40</h4>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div>
+                    <img src="images/images/camera.png"alt="">
+                    <h3>Vlogging Camera</h3>
+                    <h4>$1800.80</h4>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div>
+                    <img src="images/images/single-light.png" alt="">
+                    <h3>Green Screen</h3>
+                    <h4>$25.48</h4>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div>
+                <div>
+                    <img src="images/images/action.png" alt="">
+                    <h3>Action Camera</h3>
+                    <h4>$380.00</h4>
+                    <p>Wordwide shifting <br> available <br> Buyers protection possible</p>
+                </div> 
+            </div>
+           
+        </section>
+        <section class="feature">
+                <img src="images/images/gear.png" alt="">
+                <div class="feature-contant">
+                <h2>Featured products at one plac</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor 
+                    do amet sint. Velit officia consequat duis enim velit mollit. 
+                    Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="btn2">Join Now</button>
+                </div>
+        </section>
+    </main>
+
+
 </body>
 </html>
