--- a/index.html
+++ b/index.html
@@ -110,7 +110,19 @@
                 </div>
         </section>
     </main>
-
+<footer>
+        <h2>Influencer Products</h2>
+        <p>Copyright © 2020 influencer products <br>
+            All rights reserved</p>
+            <div class="log">
+                <img src="images/images/download (1).png" alt="">
+                <img src="images/images/download.png" alt="">
+                <img src="images/images/download (2).png" alt="">
+                <img src="images/images/download (3).png" alt="">
+        
+            </div>
+   
+</footer>
 
 </body>
 </html>
